--- a/web/templates/AdminDashboard/_admin-dashboard.scss
+++ b/web/templates/AdminDashboard/_admin-dashboard.scss
@@ -70,6 +70,7 @@
       padding: 0px;
       z-index:  $z-index-level-3;
       box-shadow: 2px 2px 5px $sq-color-slate-lightest;
+      background: $white;
       &-text {
         margin: 0;
       }
