--- a/web/components/ui/HeroContent/_hero-content.scss
+++ b/web/components/ui/HeroContent/_hero-content.scss
@@ -146,6 +146,7 @@
     .sq-hero-content__body {
       width: 100%;
       text-align: center;
+      height: 400px;
     }
     .sq-hero-content__root {
       background-size: cover;
