--- a/web/containers/PageBuilder/_component-editor.scss
+++ b/web/containers/PageBuilder/_component-editor.scss
@@ -1,4 +1,7 @@
 .sq-component-editor {
+  .tp-progress--active {
+    display: none !important;
+  }
   position: relative;
   padding: 35px 15px;
   @media (min-width: $screen-lg) {
