--- a/web/components/EditableField/_editable-field.scss
+++ b/web/components/EditableField/_editable-field.scss
@@ -1,6 +1,7 @@
 .sq-editable-field {
   width: 100%;
   padding-right: 32px;
+  min-height: 33px;
   height: 100%;
   display: flex;
   align-items: center;
