--- a/web/components/FormObject/_form-object.scss
+++ b/web/components/FormObject/_form-object.scss
@@ -54,7 +54,7 @@
           right: 10px;
         }
         max-width: 150px;
-        min-width: 150px;
+        min-width: 50%;
       }
       > .sq-form__field:nth-child(2) {
         flex-grow: 1;
