--- a/web/components/EditableField/_editable-field.scss
+++ b/web/components/EditableField/_editable-field.scss
@@ -15,7 +15,7 @@
   &__pop-over {
     min-width: 170px !important;
     &-root {
-      z-index: $z-index-level-2ndtopest !important;
+      z-index: $z-index-level-topest !important;
     }
   }
   &__edit {
