--- a/web/styles/abstract/_variables.scss
+++ b/web/styles/abstract/_variables.scss
@@ -202,6 +202,7 @@ $z-index-level-top: 9996;
 $z-index-level-3rdtopest: 9997;
 $z-index-level-2ndtopest: 9998;
 $z-index-level-topest: 9999;
+$z-index-level-hightop: 10001;
 
 $zindex-menubar: 1001;
 $zindex-loading: 1002;
