--- a/web/components/FormObject/_form-object.scss
+++ b/web/components/FormObject/_form-object.scss
@@ -55,8 +55,11 @@
         }
         max-width: 150px;
         min-width: 50%;
+        padding-bottom: 4px;
       }
       > .sq-form__field:nth-child(2) {
+        padding-left: 10px;
+        padding-bottom: 4px;
         flex-grow: 1;
       }
     }
