commented previously commented stylesheet

--- a/web/styles/_containers.scss
+++ b/web/styles/_containers.scss
@@ -15,7 +15,7 @@
 @import "../containers/PageListing/_page-listing.scss";
 @import "../containers/Register/register.scss";
 @import "../containers/SiteMapBuilder/_site-map-builder.scss";
-@import "../containers/TocIndex/_toc-index.scss";
+// @import "../containers/TocIndex/_toc-index.scss";
 @import "../containers/Users/_users.scss";
 
 .application {
