Fixed image paths

--- a/web/components/ui/Image/_image.scss
+++ b/web/components/ui/Image/_image.scss
@@ -1,6 +1,6 @@
 .sq-image {
   width: 100%;
-  display: flex;
+  display: inline-block;
   align-items: center;
   justify-content: center;
   img {
