--- a/web/components/FormObject/_form-object.scss
+++ b/web/components/FormObject/_form-object.scss
@@ -2,6 +2,9 @@
   &__item-wrap {
     display: flex;
   }
+  &__actions {
+    display: flex;
+  }
   .sq-form__field {
     margin-bottom: 8px;
   }
