Added color picker component

--- a/web/styles/_components.scss
+++ b/web/styles/_components.scss
@@ -89,3 +89,4 @@
 @import "../components/ui/TextColumnWithLinks/_text-column-links.scss";
 @import "../components/ui/TextFields/_text-fields.scss";
 @import "../components/UserMenu/_user-menu.scss";
+@import "../components/ui/ColorPicker/_color-picker.scss";
