--- a/web/containers/DynamicContent/_dynamic-content.scss
+++ b/web/containers/DynamicContent/_dynamic-content.scss
@@ -81,9 +81,9 @@
 }
 
 .dynamic-content {
-  height: 100%;
+  min-height: 100%;
   &__body {
-    height: 100%;
+    min-height: 100%;
   }
   .tp-progress {
     display: none;
