--- a/web/components/EditableField/_editable-field.scss
+++ b/web/components/EditableField/_editable-field.scss
@@ -18,6 +18,9 @@
       z-index: $z-index-level-topest !important;
     }
   }
+  &__cmp {
+    width: 100%;
+  }
   &__edit {
     position: absolute;
     display: none;
