--- a/web/components/ui/GlobalNavigation/_global-navigation.scss
+++ b/web/components/ui/GlobalNavigation/_global-navigation.scss
@@ -23,6 +23,9 @@ $sq-global-navigation-nav-color: $black;
     backdrop-filter: blur(8px);
     background-color: rgba(255,255,255,0.5);
   }
+  &--white {
+    background-color: $white;
+  }
   &--bordered {
     border-bottom: solid 1px $sq-color-gray-lighter;
   }
