--- a/web/components/ui/Image/_image.scss
+++ b/web/components/ui/Image/_image.scss
@@ -1,8 +1,10 @@
 .sq-image {
   width: 100%;
+  position: relative;
   display: inline-block;
   align-items: center;
   justify-content: center;
+
   img {
     width: 100%;
   }
@@ -11,5 +13,16 @@
       width: 100%;
       max-width: 980px;
     }
+  }
+  &--auto-full {
+    height: 100%;
+  }
+  &__no-image {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    margin: auto;
+    height: 100%;
   }
 }
