--- a/web/styles/abstract/_variables.scss
+++ b/web/styles/abstract/_variables.scss
@@ -162,6 +162,7 @@ $sq-heading-color: $sq-color-muted-darkest!default;
 
 $header-font-family: var(--header-font-family)!default;
 $paragraph-font-family: var(--paragraph-font-family)!default;
+$paragraph-med-font-family: var(--paragraph-med-font-family)!default;
 $text-font-family: var(--text-font-family)!default;
 
 
