Fixed with for side panel

--- a/web/containers/PageBuilder/Panel/_panel.scss
+++ b/web/containers/PageBuilder/Panel/_panel.scss
@@ -2,6 +2,7 @@
   border-radius: 5px;
   position: relative;
   min-width: 250px;
+  max-width: 250px;
   height: 100%;
   &__header {
     padding: 15px;
