--- a/web/components/ui/Image/_image.scss
+++ b/web/components/ui/Image/_image.scss
@@ -22,7 +22,9 @@
     left: 0;
     right: 0;
     top: 0;
+    bottom: 0;
+    height: 40px;
+    width: 40px;
     margin: auto;
-    height: 100%;
   }
 }
