--- a/web/components/ui/GlobalNavigation/_global-navigation.scss
+++ b/web/components/ui/GlobalNavigation/_global-navigation.scss
@@ -66,12 +66,12 @@ $sq-global-navigation-nav-color: $black;
   }
   &__brand {
     img {
-      width: 170px;
+      height: 50px;
     }
     margin-bottom: 10px;
     margin-right: 20px;
     flex-grow: 1;
-    width: 170px;
+    height: 50px;
     display: flex;
     align-items: center;
     color: #fff;
