--- a/web/containers/Content/_content.scss
+++ b/web/containers/Content/_content.scss
@@ -18,6 +18,7 @@
     min-height: 100vh;
     .sq-content-page__body-wrapper, .dynamic-content__body {
       flex-grow: 1;
+      position: relative;
     }
   }
 }
