--- a/web/components/Dialog/dialog.scss
+++ b/web/components/Dialog/dialog.scss
@@ -3,6 +3,7 @@
     min-height: 200px;
     min-width: 280px;
     height: 100%;
+    padding-top: 10px;
     &--auto {
       min-height: auto;
       min-width: auto;
