Fixed globa nav

--- a/web/components/ui/GlobalNavigationV2/_global-navigation-v2.scss
+++ b/web/components/ui/GlobalNavigationV2/_global-navigation-v2.scss
@@ -63,6 +63,9 @@ $sq-global-navigation-nav-color: $black;
       display: none;
     }
   }
+  &__nav {
+    display: flex;
+  }
   &__brand {
     img {
       height: 40px;
