--- a/web/components/Dialog/dialog.scss
+++ b/web/components/Dialog/dialog.scss
@@ -50,6 +50,22 @@
       overflow: unset;
     }
   }
+  &--fixed-menu-right {
+    .MuiDialog-paperWidthSm {
+        max-width: 400px !important;
+    }
+    .MuiPaper-root {
+      width: 90%;
+      max-height: 100%;
+      position: fixed;
+      top: 0;
+      right: 0;
+      height: 100%;
+      bottom: 0;
+      margin: auto;
+      overflow: unset;
+    }
+  }
   &--fixed-left {
     .MuiDialog-paperWidthSm {
       @media (min-width: $screen-sm) {
