--- a/web/components/ui/GlobalNavigation/_global-navigation.scss
+++ b/web/components/ui/GlobalNavigation/_global-navigation.scss
@@ -1,4 +1,4 @@
-$sq-global-navigation-sub-navbg:$black;
+$sq-global-navigation-sub-navbg: $sq-color-slate-darkest;
 $sq-global-navigation-nav-color: $black;
 
 .sq-global-navigation {
@@ -6,7 +6,7 @@ $sq-global-navigation-nav-color: $black;
 
   &__wrapper {
     padding: 8px 15px;
-    @media (min-width:$screen-sm) {
+    @media (min-width: $screen-sm) {
       padding: 20px;
     }
     display: flex;
@@ -21,7 +21,7 @@ $sq-global-navigation-nav-color: $black;
   }
   &--blured {
     backdrop-filter: blur(8px);
-    background-color: rgba(255,255,255,0.5);
+    background-color: rgba(255, 255, 255, 0.5);
   }
   &--white {
     background-color: $white;
@@ -45,12 +45,16 @@ $sq-global-navigation-nav-color: $black;
   }
   &--open {
   }
-
+  &__list-item {
+    .sq-link__container {
+      justify-content: flex-start;
+    }
+  }
   &__list-icon {
-    visibility: hidden;
+    display: none;
     margin-left: 4px;
     @media (min-width: $screen-md) {
-      visibility: visible;
+      display: block;
     }
   }
   &__toggler {
@@ -105,8 +109,14 @@ $sq-global-navigation-nav-color: $black;
     }
   }
   &__item-wrapper {
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
     width: 100%;
+    align-items: flex-start;
+    @media (min-width: $screen-md ) {
+      align-items: center;
+      flex-direction: row;
+    }
   }
   &__item {
     &-text {
@@ -118,7 +128,7 @@ $sq-global-navigation-nav-color: $black;
     }
     &--active {
       .sq-global-navigation__item-text {
-        color: $link-color;
+        color: $link-hover-color;
       }
     }
     &--hover {
@@ -129,8 +139,7 @@ $sq-global-navigation-nav-color: $black;
   }
   &__item-list {
     text-align: left;
-    display: block;
-
+    display: none;
     list-style: none;
     padding: 10px 10px 0 10px;
     border-radius: 10px;
@@ -138,27 +147,11 @@ $sq-global-navigation-nav-color: $black;
     width: 100%;
     @media (min-width: $screen-md) {
       background-color: $sq-global-navigation-sub-navbg;
-      &:before {
-        content: ' ';
-        display: block;
-        height: 10px;
-        width: 10px;
-        border-left: 10px solid transparent;
-        border-right: 10px solid transparent;
-        border-bottom: 10px solid $sq-global-navigation-sub-navbg;
-        position: absolute;
-        box-sizing: border-box;
-        overflow: hidden;
-        top: -10px;
-        left: 45%;
-      }
       padding: 10px 0;
-      display: none;
       position: absolute;
       z-index: $z-index-level-2ndtopest;
       top: 100%;
-      left: -50%;
-
+      right: 0;
       min-width: 170px;
     }
     > li {
@@ -180,16 +173,19 @@ $sq-global-navigation-nav-color: $black;
   }
   &__link {
     display: block;
+    text-align: left;
     @media (min-width: $screen-md) {
     }
+    
   }
   &__nav {
     list-style-type: none;
     justify-content: flex-end;
-    display: block;
+    display: none;
     padding: 20px 0 0 0;
     flex-grow: 1;
     margin: 0;
+    display: none;
     margin-right: 0;
     @media (min-width: $screen-md) {
       padding: 0;
@@ -206,7 +202,7 @@ $sq-global-navigation-nav-color: $black;
         display: inline-flex;
         align-items: center;
       }
-      @media (min-width:$screen-sm) {
+      @media (min-width: $screen-sm) {
         margin-right: 24px;
       }
       &:last-child {
@@ -256,16 +252,16 @@ $sq-global-navigation-nav-color: $black;
     .sq-global-navigation__item-list {
       > li {
         &:hover {
-          background-color: $sq-color-primary-dark;
+          background-color: $sq-color-slate-dark;
         }
       }
 
       @media (min-width: $screen-md) {
         &:before {
-          border-bottom-color: $sq-color-primary-dark;
+          border-bottom-color: $sq-color-slate-dark;
         }
-        background-color: $sq-color-primary-dark;
-        border-color: $sq-color-primary-dark;
+        background-color: $sq-color-slate-dark;
+        border-color: $sq-color-slate-dark;
         > li {
           &:hover {
             background-color: $sq-global-navigation-sub-navbg;
@@ -275,8 +271,6 @@ $sq-global-navigation-nav-color: $black;
     }
   }
 }
-
-
 
 @keyframes moveDown {
   from {
