--- a/web/styles/_containers.scss
+++ b/web/styles/_containers.scss
@@ -65,8 +65,8 @@
     min-width: 400px;
   }
   max-width: 500px;
-  margin-left: 0 auto;
-  margin-right: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   &--xs {
     max-width: 320px;
   }
