--- a/web/styles/application/components.scss
+++ b/web/styles/application/components.scss
@@ -36,6 +36,7 @@
 @import "../../components/PropsTable/_props-table.scss";
 @import "../../components/Repeater/repeater.scss";
 @import "../../components/SimpleDialog/dialog.scss";
+@import "../../components/Skeleton/_skeleton.scss";
 @import "../../components/Slider/slider.scss";
 
 
@@ -70,7 +71,9 @@
 @import "../../components/ui/FieldText/_field-text.scss";
 @import "../../components/ui/FileUploader/file-uploader.scss";
 @import "../../components/ui/Footer/_footer.scss";
+@import "../../components/ui/GlobalNavigation/UserMenu/_user-menu.scss";
 @import "../../components/ui/GlobalNavigation/_global-navigation.scss";
+@import "../../components/ui/GlobalNavigationV2/_global-navigation-v2.scss";
 
 @import "../../components/ui/Header/_header.scss";
 @import "../../components/ui/HeroContent/_hero-content.scss";
