--- a/web/styles/application/containers.scss
+++ b/web/styles/application/containers.scss
@@ -16,6 +16,8 @@
 @import "../../containers/PageBuilder/_placeholder.scss";
 
 @import "../../containers/PageListing/_page-listing.scss";
+@import "../../containers/RoleDetails/_role-details.scss";
+@import "../../containers/RolesList/_roles.scss";
 @import "../../containers/SiteMapBuilder/_site-map-builder.scss";
 @import "../../containers/TocIndex/_toc-index.scss";
 @import "../../containers/UsersList/_users-list.scss";
