--- a/web/components/EditableField/_editable-field.scss
+++ b/web/components/EditableField/_editable-field.scss
@@ -9,6 +9,7 @@
   border-radius: 4px;
   margin-left: -4px;
   padding-left: 4px;
+  min-width: 100px;
   &:hover {
     background-color: $sq-color-gray-lightest;
   }
