--- a/web/containers/PageBuilder/Panel/_panel.scss
+++ b/web/containers/PageBuilder/Panel/_panel.scss
@@ -6,6 +6,8 @@
   height: 100%;
   &__header {
     padding: 15px;
+    display: flex;
+    align-items: center;
   }
   &__container {
     display: flex;
@@ -36,5 +38,16 @@
     .sq-icon {
       color: white;
     }
+  }
+  &--full-screen {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    right: 0;
+    max-width: 100%;
+    bottom: 0;
+    z-index: $z-index-level-topest;
   }
 }
