--- a/web/components/Grid/grid.scss
+++ b/web/components/Grid/grid.scss
@@ -344,6 +344,9 @@
       min-width: 60px;
       flex-grow: 0;
       flex-shrink: 0;
+      &.sq-grid__data-cell {
+        padding: 0 10px;
+      }
     }
     .col-actions {
       flex-basis: 90px;
