--- a/web/components/ui/GlobalNavigation/_global-navigation.scss
+++ b/web/components/ui/GlobalNavigation/_global-navigation.scss
@@ -127,7 +127,7 @@ $sq-global-navigation-nav-color: $black;
       color: $sq-global-navigation-nav-color;
     }
     &--active {
-      .sq-global-navigation__item-text {
+      .sq-link {
         color: $link-hover-color;
       }
     }
