Added screen variable

--- a/web/components/ui/Footer/_footer.scss
+++ b/web/components/ui/Footer/_footer.scss
@@ -4,7 +4,7 @@
   background-color: $sq-footer-background-color;
   padding-bottom: 50px;
   &__wrapper {
-    max-width: $screen-lg;
+    max-width: $screen-max;
     margin: auto;
   }
   &__logo {
