--- a/web/containers/Content/_content.scss
+++ b/web/containers/Content/_content.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
 
   &__body, .sq-global-navigation__wrapper {
-    max-width: $screen-lg;
+    max-width: $screen-max;
     margin: auto;
   }
   &--full-width {
