--- a/web/components/Progress/progress.scss
+++ b/web/components/Progress/progress.scss
@@ -33,9 +33,9 @@
     }
   }
   &__overlay {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
+    position: absolute;
+    width: 100%;
+    height: 100%;
     left: 0;
     top: 0;
     &.default {
