--- a/web/components/ui/Textarea/textarea-field.scss
+++ b/web/components/ui/Textarea/textarea-field.scss
@@ -2,6 +2,8 @@
   &__textarea {
     width: 100%;
     margin-bottom: 5px;
+    border-color: $sq-color-slate-light;
+    border-radius: 4px;
   }
   &--error {
     color: $sq-color-error;
