Added uploader label

--- a/web/components/ui/FileUploader/file-uploader.scss
+++ b/web/components/ui/FileUploader/file-uploader.scss
@@ -1,5 +1,8 @@
 .sq-file-uploader {
   position: relative;
+  &__label {
+    margin-bottom: 4px;
+  }
   > span {
     > label {
       display: flex;
