--- a/web/styles/mixins/typography.scss
+++ b/web/styles/mixins/typography.scss
@@ -9,6 +9,17 @@
   text-overflow: ellipsis;
   overflow: hidden;
 }
+@mixin text-ellipsis($lines: 1) {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  @if ($lines > 1) {
+    display: -webkit-box;
+    -webkit-line-clamp: $lines;
+    -webkit-box-orient: vertical;
+  } @else {
+    white-space: nowrap;
+  }
+}
 @mixin style2-header() {
   font-size: $t2-font-size;
 }
