--- a/web/containers/DynamicContent/_dynamic-content.scss
+++ b/web/containers/DynamicContent/_dynamic-content.scss
@@ -84,6 +84,8 @@
   min-height: 100%;
   &__body {
     min-height: 100%;
+    float: left;
+    width: 100%;
   }
   .tp-progress {
     display: none;
