--- a/web/containers/Content/_content.scss
+++ b/web/containers/Content/_content.scss
@@ -1,6 +1,8 @@
 .sq-content-page {
   width: 100%;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 
   &__body, .sq-global-navigation__wrapper {
     max-width: $screen-max;
