Improved object builder

--- a/web/components/FormObject/_form-object.scss
+++ b/web/components/FormObject/_form-object.scss
@@ -1,5 +1,8 @@
 .sq-form-object {
   position: relative;
+  &__expand-collapse {
+    margin-top: 4px;
+  }
   &__float-full {
     position: absolute;
     top: 0;
