--- a/web/components/FormObject/_form-object.scss
+++ b/web/components/FormObject/_form-object.scss
@@ -1,20 +1,28 @@
 .sq-form-object {
   position: relative;
   &__expand-collapse {
-    margin-top: 4px;
+    position: absolute;
+    left: 0;
+    top: 6px;
   }
   &__float-full {
     position: absolute;
     top: 0;
     left: -30px;
   }
+  &__label {
+    padding-left: 24px;
+  }
+  &__item {
+    padding-left: 15px;
+    position: relative;
+    margin-left: 8px;
+  }
   &__item-wrap {
     display: flex;
-    margin-left: 20px;
   }
   &__actions {
     display: flex;
-    margin-left: 20px;
   }
   .sq-form__field {
     margin-bottom: 8px;
@@ -31,7 +39,10 @@
       width: 100%;
       > .sq-form__field:nth-child(1) {
         position: relative;
-        padding-left: 10px;
+        margin-left: 10px;
+        > .sq-text {
+          margin-top: 10px;
+        }
         &:before {
           content: " ";
           position: absolute;
