--- a/web/components/HeaderWithTiles/_header-with-tiles.scss
+++ b/web/components/HeaderWithTiles/_header-with-tiles.scss
@@ -51,13 +51,19 @@
   }
   &__item-header {
     @include t4-style();
+    flex-basis: 100px;
+    flex-grow: 0;
+    flex-shrink: 0;
   }
   &__img {
-    height: 120px;
+    height: 90px;
     width: 120px;
+    margin-left: 20px;
+    justify-content: flex-end;
     display: flex;
+    flex-grow: 1;
     img {
-      width: 100%;
+      height: 100%;
     }
   }
   &__text {
